tests/baselines/reference/parserErrorRecovery_SourceUnit1.errors.txt
==== tests/cases/compiler/parserErrorRecovery_SourceUnit1.ts (1 errors) ====
    class C {
    }
    }
    ~
!!! parserErrorRecovery_SourceUnit1.ts(3,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    class D {
    }